Improve mobile responsive design - adjust navbar sizing and spacing

--- a/index.html
+++ b/index.html
@@ -226,31 +226,31 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-        <a href="index.html" class="navbar-brand d-flex align-items-center" style="gap: 12px;">
-            <img class="img-fluid" src="img/icon/icon-02-primary.png" alt="SSR Logo" style="height: 40px; width: auto;">
-            <h1 class="m-0" style="font-weight: 700; color: var(--primary); font-size: 1.8rem; display: flex; align-items: center; height: 40px;">SSR</h1>
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-2 px-lg-5">
+        <a href="index.html" class="navbar-brand d-flex align-items-center" style="gap: 8px;">
+            <img class="img-fluid" src="img/icon/icon-02-primary.png" alt="SSR Logo" style="height: 35px; width: auto;">
+            <h1 class="m-0" style="font-weight: 700; color: var(--primary); font-size: clamp(1rem, 3vw, 1.8rem); display: flex; align-items: center; height: 35px;">SSR</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto bg-light pe-4 py-3 py-lg-0">
-                <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About Us</a>
-                <a href="#book-service" class="nav-item nav-link">Contact Us</a>
-                <a href="#services" class="nav-item nav-link">Our Services</a>
-                <a href="#working-hours" class="nav-item nav-link">Working Hours</a>
+            <div class="navbar-nav mx-auto bg-light pe-2 py-2 py-lg-0">
+                <a href="#home" class="nav-item nav-link active" style="font-size: 0.9rem;">Home</a>
+                <a href="#about" class="nav-item nav-link" style="font-size: 0.9rem;">About Us</a>
+                <a href="#book-service" class="nav-item nav-link" style="font-size: 0.9rem;">Contact Us</a>
+                <a href="#services" class="nav-item nav-link" style="font-size: 0.9rem;">Our Services</a>
+                <a href="#working-hours" class="nav-item nav-link" style="font-size: 0.9rem;">Working Hours</a>
             </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none gap-2">
+            <div class="h-100 d-lg-inline-flex align-items-center d-none gap-1">
                 <button class="toggle-switch" id="nightModeToggle" title="Toggle Night Mode">
                     <div class="toggle-slider">
                         <i class="fas fa-moon"></i>
                     </div>
                 </button>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="https://www.instagram.com/sriramairconditioner?igsh=YWFwNTN1eWRkbmxi&utm_source=qr" target="_blank" title="Follow us on Instagram" style="width: 40px; height: 40px; background-color: var(--primary); color: white;"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="tel:+918637401169" title="Call us" style="width: 40px; height: 40px; background-color: var(--primary); color: white;"><i class="fas fa-phone"></i></a>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="mailto:sriramairconditioner23@gmail.com" title="Email us" style="width: 40px; height: 40px; background-color: var(--primary); color: white;"><i class="fas fa-envelope"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="https://www.instagram.com/sriramairconditioner?igsh=YWFwNTN1eWRkbmxi&utm_source=qr" target="_blank" title="Follow us on Instagram" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="tel:+918637401169" title="Call us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-phone"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="mailto:sriramairconditioner23@gmail.com" title="Email us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </nav>
