Fix view mode toggle button visibility on all screen sizes

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <a href="#services" class="nav-item nav-link" style="font-size: 0.9rem;">Our Services</a>
                 <a href="#working-hours" class="nav-item nav-link" style="font-size: 0.9rem;">Working Hours</a>
             </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none gap-1">
+            <div class="h-100 d-flex align-items-center gap-1">
                 <button class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" id="viewModeToggle" title="Toggle View Mode (Desktop/Mobile)" style="width: 35px; height: 35px; background-color: var(--primary); color: white;">
                     <i class="fas fa-mobile-alt"></i>
                 </button>
@@ -278,9 +278,9 @@
                         <i class="fas fa-moon"></i>
                     </div>
                 </button>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="https://www.instagram.com/sriramairconditioner?igsh=YWFwNTN1eWRkbmxi&utm_source=qr" target="_blank" title="Follow us on Instagram" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="tel:+918637401169" title="Call us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-phone"></i></a>
-                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" href="mailto:sriramairconditioner23@gmail.com" title="Email us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-envelope"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center d-none d-lg-flex" href="https://www.instagram.com/sriramairconditioner?igsh=YWFwNTN1eWRkbmxi&utm_source=qr" target="_blank" title="Follow us on Instagram" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center d-none d-lg-flex" href="tel:+918637401169" title="Call us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-phone"></i></a>
+                <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center d-none d-lg-flex" href="mailto:sriramairconditioner23@gmail.com" title="Email us" style="width: 35px; height: 35px; background-color: var(--primary); color: white;"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </nav>
