Move button bar to bottom-right corner with fixed positioning

--- a/index.html
+++ b/index.html
@@ -246,13 +246,14 @@
         /* Top Button Bar */
         .top-button-bar {
             position: fixed;
-            top: 0;
-            right: 15px;
+            bottom: 20px;
+            right: 20px;
             z-index: 1050;
             display: flex;
-            gap: 10px;
+            flex-direction: column;
+            gap: 12px;
             align-items: center;
-            padding: 12px 0;
+            padding: 0;
             background: transparent;
         }
         
