--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -31,16 +31,6 @@
     <link href="css/style.css" rel="stylesheet">
     
     <style>
-        /* Force Desktop View Zoom on All Devices */
-        html, body {
-            width: 1200px;
-            margin: 0 auto;
-        }
-        
-        * {
-            -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-        }
         .carousel-caption {
             text-align: center !important;
         }
