--- a/index.html
+++ b/index.html
@@ -51,6 +51,44 @@
             margin-right: auto;
             text-align: center;
         }
+
+        /* Desktop View Optimization */
+        @media (min-width: 1200px) {
+            .container {
+                max-width: 1100px !important;
+            }
+            .service-compact {
+                max-width: 1000px;
+            }
+            .row {
+                margin-right: -15px;
+                margin-left: -15px;
+            }
+            h1, h2, h3 {
+                font-size: 1.3em;
+            }
+            .navbar {
+                padding: 1.5rem 0;
+            }
+        }
+
+        /* Mobile View - Smaller and Compact */
+        @media (max-width: 768px) {
+            .container {
+                max-width: 100% !important;
+                padding: 0 10px;
+            }
+            h1, h2, h3 {
+                font-size: 1.1em;
+            }
+            .navbar {
+                padding: 0.8rem 0;
+            }
+            .service-compact {
+                max-width: 100%;
+                margin-bottom: 0.8rem !important;
+            }
+        }
         .service-compact .row {
             margin-bottom: 0.3rem !important;
             margin-left: auto !important;
