Improve alignment - adjust viewport scale to 0.45 and fix container margins

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200px, initial-scale=0.4, maximum-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=1200px, initial-scale=0.45, maximum-scale=1.0, user-scalable=yes">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -35,11 +35,18 @@
         html, body {
             width: 1200px;
             margin: 0 auto;
+            padding: 0;
         }
         
         * {
             -webkit-text-size-adjust: none;
             -ms-text-size-adjust: none;
+        }
+
+        /* Fix alignment for all containers */
+        .container, .navbar-brand, .navbar-nav {
+            margin: 0 !important;
+            padding: 0 !important;
         }
 
         .carousel-caption {
@@ -71,8 +78,8 @@
             }
             .navbar, .container, .row, .col {
                 width: 100%;
-                margin: 0;
-                padding: inherit;
+                margin: 0 !important;
+                padding: 0 !important;
             }
         }
         .service-compact .row {
