Fix Book Your Service image alignment - properly display background images

--- a/index.html
+++ b/index.html
@@ -138,6 +138,33 @@
             align-items: center;
             justify-content: center;
         }
+
+        /* Book Your Service Section - Image Alignment */
+        .quote {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .quote .row {
+            width: 100%;
+        }
+
+        .quote-text, .quote-form {
+            width: 50% !important;
+            flex: 0 0 50% !important;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        .quote-text {
+            background-image: url('img/carousel-1.jpg') !important;
+        }
+
+        .quote-form {
+            background-image: url('img/carousel-2.jpg') !important;
+        }
         .service-compact .col-md-3 span {
             font-size: 1rem;
             white-space: nowrap;
