--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, initial-scale=0.5, maximum-scale=5, user-scalable=yes">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -31,6 +31,18 @@
     <link href="css/style.css" rel="stylesheet">
     
     <style>
+        /* Desktop View Only - Exact Layout */
+        html, body {
+            width: 1200px;
+            margin: 0 auto;
+            padding: 0;
+        }
+
+        * {
+            -webkit-text-size-adjust: none;
+            -ms-text-size-adjust: none;
+        }
+
         .carousel-caption {
             text-align: center !important;
         }
