--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200, initial-scale=0.82, maximum-scale=5, user-scalable=yes">
+    <meta name="viewport" content="width=1200, initial-scale=0.82, viewport-fit=cover">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
