--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200, initial-scale=0.82, maximum-scale=0.82, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=1200, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -36,7 +36,7 @@
             width: 1200px;
             margin: 0 auto;
             padding: 0;
-            overflow-x: hidden;
+            overflow-x: auto;
         }
 
         * {
