--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200, initial-scale=0.4, maximum-scale=0.4, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=1200, initial-scale=0.5, maximum-scale=0.5, user-scalable=no, viewport-fit=cover">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -32,11 +32,19 @@
     
     <style>
         /* Desktop View Only - Exact Layout */
-        html, body {
+        html {
+            width: 1200px;
+            height: 100%;
+        }
+
+        body {
             width: 1200px;
             margin: 0 auto;
             padding: 0;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         * {
