--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200, initial-scale=0.5, maximum-scale=0.5, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -41,10 +41,8 @@
             width: 1200px;
             margin: 0 auto;
             padding: 0;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
 
         * {
