Better fit - 0.82 zoom with horizontal scrolling enabled

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SSR</title>
-    <meta name="viewport" content="width=1200, initial-scale=0.5, maximum-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=1200, initial-scale=0.82, maximum-scale=1.0, user-scalable=yes">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -36,6 +36,7 @@
             width: 1200px;
             margin: 0 auto;
             padding: 0;
+            overflow-x: auto;
         }
 
         * {
