--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             width: 1200px;
             margin: 0 auto;
             padding: 0;
-            overflow: hidden;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
 
         * {
